--- a/games.yaml
+++ b/games.yaml
@@ -93,7 +93,7 @@
 
 - name: "ADOM (Ancient Domains of Mystery)"
   url: http://www.adom.de/
-  info: ADOM is a roguelike game which means that it is a single-user game featuring the exploration of a dungeon complex (and in the case of ADOM a few other games of this genre: the exploration of a large wilderness area with villages and many special locations). You control a fictional character described by race, class, attributes, skills, and equipment. This fictional character is trying to achieve a specific goal (see below) and succeed in a difficult quest. To fulfill the quest, you have to explore previously undiscovered tunnels and dungeons, fight hideous monsters, uncover long forgotten secrets, and find treasures of all kind.
+  info: ADOM is a roguelike game.
 
 - name: arithmetic
   url: http://man.openbsd.org/arithmetic.6
