--- a/games.yaml
+++ b/games.yaml
@@ -47,7 +47,7 @@
 - name: Anonymine
   url: https://oskog97.com/projects/anonymine/
   info: A curses mode minesweeper solvable without guessing, and the only with von Neumann neighbourhoods.
-  play: ssh play@anonymine-demo.oskog97.com -p 2222 # no password
+  play: ssh play@anonymine-demo.oskog97.com -p 2222 # Password is "play"
   screencast: https://asciinema.org/a/82455
 
 - name: aop
