--- a/games.yaml
+++ b/games.yaml
@@ -260,6 +260,7 @@
 #   Site broken: http://www.x86.no/cavezofphear/
 #   https://web.archive.org/web/20160523182502/http://www.x86.no/cavezofphear/
 - name: cavez of phear
+  url: http://web.archive.org/web/20140627005101/http://www.x86.no/cavezofphear/
   info: cavez of phear is a boulder dash / digger like game for console using ncurses.
 
 - name: cbattleship
