--- a/games.yaml
+++ b/games.yaml
@@ -159,11 +159,6 @@
   url: https://man.openbsd.org/OpenBSD-current/man6/backgammon.6
   info: "A backgammon game; you can play against the computer. It's a BSD game."
   wikipedia: https://en.wikipedia.org/wiki/Backgammon
-  
-- name: backgammon-telnet
-  url:
-  info: "Play backgammon over telnet."
-  play: telnet fibs.com 4321
 
 - name: bastet
   url: http://fph.altervista.org/prog/bastet.html
@@ -515,10 +510,6 @@
 - name: gnuski
   url: https://sourceforge.net/projects/gnuski/
   info: GNUSki is an open source clone of Skifree, the old Windows game.
-  
-- name: go-telnet
-  info: "Play or watch games of Go over telnet"
-  play: igs.joyjoy.net 6969
 
 - name: goblinhack
   url: https://github.com/goblinhack/goblinhack
@@ -970,7 +961,7 @@ by a baddie or you run out of energy."
 - name: roguelike gallery
   url: https://rlgallery.org
   info: A living museum of roguelike games
-  play: ssh rodney@rlgallery.org; password: yendor
+  play: ssh rodney@rlgallery.org - password is yendor
 
 - name: the rougelike!
   url: https://common-lisp.net/project/lifp/rouge.htm
