--- a/games.yaml
+++ b/games.yaml
@@ -303,7 +303,7 @@
   play: "ssh ckhet@sshgames.thegonz.net; password: ckhet"
 
 - name: clines
-  url: http://manticore.2y.net/prj/clines-a.html
+  url: http://web.archive.org/web/20190327173340/http://manticore.2y.net/prj/clines-a.html
   info: Clines is a standard "Lines" game, implemented as a curses application.
 
 - name: clines
@@ -709,7 +709,7 @@
   play: telnet or ssh on sdf.org
 
 - name: moria
-  url: http://www-math.bgsu.edu/~grabine/moria.html
+  url: http://web.archive.org/web/20190731112356/http://www-math.bgsu.edu/~grabine/moria.html
   info: The game is set in Moria and the goal is to kill off the balrog.
 
 - name: msnake
@@ -750,7 +750,7 @@
   info: "This is netris, a networked version of t*tris. It allows head to head two player games via a network."
 
 - name: netris (2019)
-  url: https://git.sr.ht/~tslocum/netris
+  url: http://web.archive.org/web/20200112024309/https://git.sr.ht/~tslocum/netris
   info: Tetris clone featuring competitive online multiplayer.
   play: ssh netris.rocketnine.space
 
@@ -1265,7 +1265,7 @@ read. Go too slow and you'll get wound up in the scroll and crushed."
 
 
 - name: xorcurses
-  url: http://www.jwm-art.net/dark.php?p=XorCurses
+  url: http://web.archive.org/web/20200807032528/http://www.jwm-art.net/dark.php?p=XorCurses
   info: XorCurses is a puzzle game set inside a series of mazes.
   screencast: https://asciinema.org/a/34065
 
